--- a/kawtn.IO.csproj
+++ b/kawtn.IO.csproj
@@ -10,7 +10,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
-    <AssemblyVersion>2.2.6</AssemblyVersion>
+    <AssemblyVersion>3.0.0-alpha</AssemblyVersion>
     <FileVersion>$(AssemblyVersion)</FileVersion>
     <Version>$(AssemblyVersion)</Version>
     <Description>kawtn's files helper for C#
